Updated project list

--- a/index.html
+++ b/index.html
@@ -231,17 +231,17 @@
           <!-- proj 1 -->
           <div class="item">
             <div class="imageContainer">
-              <img src="images/project1.jpg" alt="" />
+              <img src="images/tee-teilen.png" alt="" />
               <div class="projLinks">
                 <a
-                  href="https://github.com/your-repo"
+                  href="https://github.com/japint/project-teeteilen"
                   target="_blank"
                   title="GitHub"
                 >
                   <i class="fa-brands fa-github"></i>
                 </a>
                 <a
-                  href="https://your-demo-link.com"
+                  href="https://teeteilen.netlify.app/?fbclid=IwY2xjawKQbp5leHRuA2FlbQIxMABicmlkETBrbWp3bUZGcmhhUzNMNWNaAR6rF90yE70mYdzjtEnAFbx87-Nc-dcsRVTGVD_o5a-RPNeYLLsgBgo4Rs55FQ_aem_gVEIVwJHGbR4pLIO6iobzg"
                   target="_blank"
                   title="Live Demo"
                 >
@@ -250,16 +250,16 @@
               </div>
             </div>
             <div class="projIndex">#1</div>
-            <div class="projName">Project Name</div>
+            <div class="projName">tee-teilen.com</div>
             <div class="projDes">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
               dignissimos illo laboriosam ipsam accusamus, quibusdam ratione
               iusto libero non voluptatem.
             </div>
             <div class="projAuthor">
-              <div class="projJob">FullStack</div>
+              <div class="projJob">vanilla html+css+js</div>
               <div class="time">
-                2022/10/10
+                2024/21/03
                 <i class="fa-regular fa-clock"></i>
               </div>
             </div>
@@ -269,17 +269,17 @@
           <!-- proj 2 -->
           <div class="item">
             <div class="imageContainer">
-              <img src="images/project2.jpg" alt="" />
+              <img src="images/todo-app.png" alt="" />
               <div class="projLinks">
                 <a
-                  href="https://github.com/your-repo"
+                  href="https://github.com/japint/todo-app/tree/main"
                   target="_blank"
                   title="GitHub"
                 >
                   <i class="fa-brands fa-github"></i>
                 </a>
                 <a
-                  href="https://your-demo-link.com"
+                  href="https://todo-app-2ved.onrender.com/"
                   target="_blank"
                   title="Live Demo"
                 >
@@ -288,7 +288,7 @@
               </div>
             </div>
             <div class="projIndex">#2</div>
-            <div class="projName">Project Name</div>
+            <div class="projName">todo-app</div>
             <div class="projDes">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
               dignissimos illo laboriosam ipsam accusamus, quibusdam ratione
@@ -297,7 +297,7 @@
             <div class="projAuthor">
               <div class="projJob">FullStack</div>
               <div class="time">
-                2022/10/10
+                2024/05/08
                 <i class="fa-regular fa-clock"></i>
               </div>
             </div>
@@ -306,10 +306,10 @@
           <!-- proj 3 -->
           <div class="item">
             <div class="imageContainer">
-              <img src="images/project3.jpg" alt="" />
+              <img src="images/pinterest-clone.png" alt="" />
               <div class="projLinks">
                 <a
-                  href="https://github.com/your-repo"
+                  href="https://github.com/ReDI-School/S25-Full-Stack-Circle"
                   target="_blank"
                   title="GitHub"
                 >
@@ -325,16 +325,16 @@
               </div>
             </div>
             <div class="projIndex">#3</div>
-            <div class="projName">Project Name</div>
+            <div class="projName">FullStack Circle | pinterest-clone</div>
             <div class="projDes">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
               dignissimos illo laboriosam ipsam accusamus, quibusdam ratione
               iusto libero non voluptatem.
             </div>
             <div class="projAuthor">
-              <div class="projJob">FullStack</div>
+              <div class="projJob">FullStack | Collaborative | Agile</div>
               <div class="time">
-                2022/10/10
+                2025/01/04
                 <i class="fa-regular fa-clock"></i>
               </div>
             </div>
