Update Project section and improve contact section

--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
                 <i class="fa-solid fa-screwdriver-wrench"></i>
                 <div class="expContent">
                   <div class="expJob">Autocad Operator</div>
-                  <div class="expCompany">Alpine Systems Corporation</div>
+                  <div class="expCompany">MSQP, KSA</div>
                   <div class="expDes">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nihil blanditiis dolores sint sit dicta natus provident
-                    quibusdam eum nemo sed!
+                    Prepared HVAC duct designs and layouts per SMACNA/ISO
+                    standards for projects across KSA and GCC. Supported
+                    drafting for installation and maintenance.
                   </div>
                 </div>
               </div>
@@ -131,15 +131,15 @@
 
               <!-- pic -->
               <div class="expItem">
-                <div class="expTime">2009</div>
+                <div class="expTime">2013</div>
                 <i class="fa-solid fa-screwdriver-wrench"></i>
                 <div class="expContent">
                   <div class="expJob">Project in Charge</div>
-                  <div class="expCompany">Alpine Systems Corporation</div>
+                  <div class="expCompany">Alpine Systems Corporation, Ph</div>
                   <div class="expDes">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nihil blanditiis dolores sint sit dicta natus provident
-                    quibusdam eum nemo sed!
+                    Drafted wastewater treatment plant (STP) layouts and piping
+                    systems. Promoted to Project In-Charge, overseeing site
+                    execution, coordination, and project delivery.
                   </div>
                 </div>
               </div>
@@ -147,15 +147,18 @@
 
               <!-- aec -->
               <div class="expItem">
-                <div class="expTime">2016</div>
+                <div class="expTime">2017</div>
                 <i class="fa-solid fa-user-tie"></i>
                 <div class="expContent">
                   <div class="expJob">Project Manager</div>
                   <div class="expCompany">AEC Water Tech</div>
                   <div class="expDes">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nihil blanditiis dolores sint sit dicta natus provident
-                    quibusdam eum nemo sed!
+                    Led water and wastewater projects from planning to
+                    execution, ensuring efficient, cost-effective delivery.
+                    Oversaw engineering teams, local fabrication, and site
+                    operations, aligning with AEC’s mission to provide
+                    sustainable and accessible water solutions in the
+                    Philippines.
                   </div>
                 </div>
               </div>
@@ -171,9 +174,10 @@
                     ReDI School of Digital Integration
                   </div>
                   <div class="expDes">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nihil blanditiis dolores sint sit dicta natus provident
-                    quibusdam eum nemo sed!
+                    Relocated to Germany and shifted to software engineering
+                    through ReDI School’s Full-Stack program. Completed B1
+                    German, currently pursuing B2 DTB level. Actively seeking
+                    entry-level opportunities in tech.
                   </div>
                 </div>
               </div>
@@ -319,7 +323,7 @@
               requires JavaScript to function properly.
             </div>
             <div class="projAuthor">
-              <div class="projJob">FullStack</div>
+              <div class="projJob">FullStack | MERN</div>
               <div class="time">
                 2024/05/08
                 <i class="fa-regular fa-clock"></i>
@@ -351,12 +355,15 @@
             <div class="projIndex">#3</div>
             <div class="projName">FullStack Circle | pinterest-clone</div>
             <div class="projDes">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
-              dignissimos illo laboriosam ipsam accusamus, quibusdam ratione
-              iusto libero non voluptatem.
+              Red Interest is a collaborative, full-stack web application
+              inspired by Pinterest, designed to provide users with an engaging
+              image-sharing platform. Developed over 14 weeks in three distinct
+              phases, the project emphasized real-world software development
+              practices, including Agile methodologies and Scrum-based
+              workflows.
             </div>
             <div class="projAuthor">
-              <div class="projJob">FullStack | Collaborative | Agile</div>
+              <div class="projJob">FullStack | PERN | Agile | Scrum</div>
               <div class="time">
                 2025/01/04
                 <i class="fa-regular fa-clock"></i>
