--- a/index.html
+++ b/index.html
@@ -469,19 +469,29 @@
         <div class="contactList">
           <div class="contactListItem">
             <i class="fa-solid fa-envelope"></i>
-            japcenteno@gmail.com
+            <a href="mailto:japcenteno@gmail.com">japcenteno@gmail.com</a>
           </div>
           <div class="contactListItem">
             <i class="fa-solid fa-phone"></i>
-            +15734708799
+            <a href="tel:+15734708799">+1 (573) 470-8799</a>
           </div>
           <div class="contactListItem">
             <i class="fa-brands fa-linkedin"></i>
-            https://www.linkedin.com/in/angelo-centeno/
+            <a
+              href="https://www.linkedin.com/in/angelo-centeno/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >linkedin.com/in/angelo-centeno</a
+            >
           </div>
           <div class="contactListItem">
             <i class="fa-brands fa-github"></i>
-            https://github.com/japint
+            <a
+              href="https://github.com/japint"
+              target="_blank"
+              rel="noopener noreferrer"
+              >github.com/japint</a
+            >
           </div>
         </div>
       </div>
